<resources>
    <string name="app_name">Project Shadow</string>
    <string name="login">Iniciar Sesion</string>
    <string name="getInto">INGRESAR</string>
    <string name="Id">Identificación</string>
    <string name="checkIn">¿ No tienes cuenta ?, Registrate aqui</string>
    <string name="FormCheckInText">Formulario de registro</string>
    <string name="SelectorText">Por favor seleccionar el tipo de biometria</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="checkin">Check In</string>
    <string name="welcome_message">Welcome to project shadow</string>
    <string name="loadingText">Loading...</string>
    <string name="Ingre_huellas">Ingresar con huellas</string>
</resources>