<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fondo"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="50dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="60dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtIdUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLogin"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edt_id"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="@string/Id"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtIdUser"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:text="@string/getInto" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/checkIn"
                android:textColor="@color/black" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>